tests/trybuild/non-string-literal.stderr
error: expected string literal
 --> tests/trybuild/non-string-literal.rs:4:23
  |
4 |     let str = dedent!(1);
  |                       ^
