tests/trybuild/non-string-literal.rs
use dedent::dedent;

fn main() {
    let str = dedent!(1);
}
